--- a/nombre y edad/index.html
+++ b/nombre y edad/index.html
@@ -8,6 +8,6 @@
 <body>
     <head>
     </head>
-    <script src="index.js"></script>
+    <script src="index_edadnm.js"></script>
 </body>
 </html>
